--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-home />
-
-<router-outlet />
-<!-- <app-home />
-
-<router-outlet /> -->
+<header>
+  <app-home />
+</header>
+<main class="flex-1">
+  <router-outlet />
+</main>
