--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,51 +1,92 @@
-<div class="app-header flex">
-    <div class="flex">
-        <h1 class="text">Manga Collector</h1>
-        <button
-            id="browse-sales"
-            class="nav-button"
-            (click)="routeTo('sales', defaultSalesQuery)"
-        >
-            Browse Sales
-        </button>
-        <button
-            id="browse-sales"
-            class="nav-button"
-            (click)="routeTo('series', defaultSeriesQuery)"
-        >
-            Browse Series
-        </button>
-        @if (userService.userDataIsValid()) {
-            <button
-                id="my-collection"
-                class="nav-button"
-                (click)="routeToUserPage('collection', defaultCollectionQuery)"
-            >
-                My Volumes
-            </button>
-            <button
-                id="my-series"
-                class="nav-button"
-                (click)="routeToUserPage('series', defaultSeriesQuery)"
-            >
-                My Series
-            </button>
-        }
+<p-menubar [model]="menuItems()" class="rounded-none! border-0! border-b!">
+  <ng-template #start>
+    <svg
+      version="1.0"
+      xmlns="http://www.w3.org/2000/svg"
+      width="2rem"
+      height="2rem"
+      viewBox="0 0 230.000000 230.000000"
+      preserveAspectRatio="xMidYMid meet"
+    >
+      <g
+        transform="translate(0.000000,230.000000) scale(0.100000,-0.100000)"
+        class="fill-gray-900 dark:fill-gray-300"
+        stroke="none"
+      >
+        <path
+          d="M1004 2136 c-308 -70 -540 -318 -608 -648 -32 -155 -18 -342 31 -399
+20 -23 17 -27 -29 -34 -24 -4 -62 -16 -86 -27 -40 -19 -42 -22 -42 -62 0 -28
+-6 -47 -19 -58 -16 -14 -19 -31 -20 -134 0 -66 0 -128 -1 -139 0 -11 -13 -27
+-30 -37 -39 -22 -70 -74 -70 -119 0 -39 35 -113 81 -171 29 -37 29 -38 29
+-172 0 -78 4 -136 9 -136 15 0 24 87 18 171 -6 72 -5 80 14 89 11 6 28 9 38 5
+28 -9 91 23 109 55 9 17 24 32 32 35 14 5 67 104 72 135 3 19 -31 90 -43 90
+-5 0 -9 7 -9 15 0 8 -9 19 -19 25 -25 13 -117 13 -142 0 -12 -7 -25 -7 -37 -1
+-15 8 -17 24 -16 135 1 69 5 129 8 135 22 35 314 39 440 6 31 -8 65 -15 74
+-15 9 0 28 -6 42 -13 14 -7 48 -21 75 -31 28 -11 61 -27 74 -38 13 -10 30 -18
+37 -18 7 0 20 -10 28 -22 14 -19 16 -74 16 -390 0 -361 0 -368 20 -368 20 0
+20 7 20 365 l0 365 49 0 c35 0 51 -4 55 -16 3 -9 6 -173 6 -365 0 -285 2 -349
+13 -349 11 0 15 69 20 363 3 199 9 370 12 379 4 9 19 21 35 28 16 7 31 18 34
+26 3 8 11 14 18 14 7 0 24 6 38 13 143 75 547 126 608 77 21 -17 22 -26 22
+-144 0 -143 9 -131 -96 -127 -42 2 -56 -2 -83 -25 -33 -28 -61 -81 -61 -118 0
+-12 11 -37 25 -56 14 -19 25 -39 25 -44 0 -6 23 -34 50 -62 34 -36 64 -56 95
+-65 l45 -13 0 -123 0 -123 30 0 30 0 0 134 0 133 45 69 c63 96 73 131 51 189
+-16 41 -59 85 -85 85 -7 0 -11 46 -11 143 0 79 -4 147 -9 153 -6 5 -11 29 -13
+54 -3 42 -6 46 -47 67 -25 13 -67 26 -93 29 -26 4 -48 8 -48 11 0 2 12 27 28
+56 26 50 27 57 27 202 -1 170 -12 224 -77 364 -96 211 -268 364 -483 431 -90
+28 -263 36 -351 16z m275 -36 c205 -39 400 -188 509 -391 59 -109 85 -211 90
+-354 3 -113 1 -138 -17 -189 -27 -78 -45 -96 -93 -96 l-38 0 34 68 c82 163 87
+276 18 416 -69 139 -151 195 -268 183 -70 -7 -119 -35 -182 -101 -72 -76 -104
+-149 -110 -248 l-5 -78 -52 0 c-30 0 -60 -3 -68 -6 -11 -4 -16 9 -22 63 -15
+137 -59 236 -145 320 -62 61 -116 79 -185 64 -74 -17 -180 -113 -218 -198 -64
+-144 -58 -353 13 -454 l21 -29 -40 0 c-37 0 -42 4 -65 43 -46 80 -54 196 -24
+357 56 308 278 554 563 625 62 16 215 18 284 5z m-418 -396 c33 -16 89 -79
+122 -136 28 -46 51 -128 62 -216 7 -52 7 -52 -24 -63 -46 -16 -58 -45 -34 -78
+30 -40 121 -91 163 -91 44 0 131 49 160 90 28 39 19 65 -27 81 l-36 11 6 80
+c8 124 74 236 174 294 60 36 164 37 218 4 103 -63 177 -260 146 -387 -7 -26
+-32 -89 -57 -139 l-44 -91 -80 -12 c-162 -25 -298 -87 -391 -180 l-66 -66 -20
+30 c-25 38 -112 105 -178 139 -65 32 -214 75 -288 83 -48 5 -62 11 -84 37 -82
+97 -92 308 -22 454 33 68 126 157 177 168 15 3 32 7 37 9 14 4 56 -6 86 -21z
+m424 -444 c11 -9 12 -17 4 -32 -16 -29 -99 -78 -133 -78 -39 0 -111 35 -136
+68 -24 29 -17 40 32 53 47 12 214 4 233 -11z m-620 -241 c169 -23 309 -84 403
+-174 34 -34 62 -66 62 -73 0 -20 -41 -13 -75 12 -75 58 -206 109 -360 142 -91
+20 -288 29 -342 16 -43 -10 -43 -10 -43 18 0 25 6 30 48 44 87 28 183 33 307
+15z m1289 -12 c44 -15 62 -36 53 -60 -5 -12 -13 -13 -44 -6 -178 41 -570 -43
+-705 -151 -40 -32 -68 -39 -68 -15 0 24 96 112 162 149 72 40 168 72 271 92
+87 16 274 12 331 -9z m126 -452 c16 -8 30 -18 30 -21 0 -3 -6 -2 -12 2 -7 4
+-3 -3 10 -15 30 -29 28 -61 -9 -126 -38 -67 -71 -95 -113 -95 -39 0 -79 27
+-72 47 3 8 2 12 -3 8 -11 -6 -63 58 -87 108 -16 34 -17 40 -2 70 26 54 63 66
+153 51 41 -8 88 -20 105 -29z m-1631 19 c35 -21 52 -57 41 -94 -7 -25 -72
+-121 -107 -158 -21 -22 -78 -26 -110 -7 -40 24 -93 117 -93 166 0 59 22 76
+135 102 45 10 108 6 134 -9z"
+        />
+        <path
+          d="M739 1374 c-18 -19 -24 -37 -24 -69 0 -32 6 -50 24 -69 31 -33 55
+-33 86 -1 35 34 35 106 0 140 -31 32 -55 32 -86 -1z"
+        />
+        <path
+          d="M1489 1381 c-20 -16 -24 -28 -24 -76 0 -48 4 -59 25 -75 33 -26 52
+-25 77 3 40 43 41 104 2 146 -25 26 -50 27 -80 2z"
+        />
+        <path d="M2015 330 c-3 -6 1 -7 9 -4 18 7 21 14 7 14 -6 0 -13 -4 -16 -10z" />
+        <path d="M220 541 c0 -6 4 -13 10 -16 6 -3 7 1 4 9 -7 18 -14 21 -14 7z" />
+      </g>
+    </svg>
+  </ng-template>
+  <ng-template #item let-item let-root="root">
+    <a class="p-menubar-item-link flex items-center">
+      <span>{{ item.label }}</span>
+      @if (item.items) {
+        <i [ngClass]="['pi ml-auto', root ? 'pi-angle-down' : 'pi-angle-right']"></i>
+      }
+    </a>
+  </ng-template>
+  <ng-template #end>
+    <div class="flex items-center gap-2">
+      @if (userService.userDataIsValid()) {
+        <p-button label="Sign Out" id="sign-out" (click)="userService.logout()" />
+      } @else {
+        <p-button label="Login" id="log-in" (click)="callOpenLogin()" size="small" />
+      }
     </div>
-    <div>
-        <!-- user icon -->
-        @if (userService.userDataIsValid()) {
-            <button
-                id="sign-out"
-                class="nav-button"
-                (click)="userService.logout()"
-            >
-                Sign Out
-            </button>
-        } @else {
-            <button id="log-in" class="nav-button" (click)="callOpenLogin()">
-                Login
-            </button>
-        }
-    </div>
-</div>
+  </ng-template>
+</p-menubar>
