--- a/src/app/page-components/series/series.component.html
+++ b/src/app/page-components/series/series.component.html
@@ -1,141 +1,137 @@
 <div class="mt-28 flex justify-between">
-    <div
-        class="flex flex-col gap-2 h-fit w-36 m-8 text-white text-sm text-nowrap"
+  <div class="m-8 flex h-fit w-36 flex-col gap-2 text-sm text-nowrap text-white">
+    <!-- Filter Title -->
+    <div>
+      <div class="text-xs italic">Title</div>
+      <input type="text" pInputText [(ngModel)]="filterTitle" />
+    </div>
+
+    <!-- Filter Category -->
+    <app-autofill-select-filter
+      title="Category"
+      [list]="(options$('category') | async) ?? []"
+      [(ngModel)]="filterCategory"
+    ></app-autofill-select-filter>
+
+    <!-- Filter Status -->
+    <app-autofill-select-filter
+      title="Release Status"
+      [list]="(options$('status') | async) ?? []"
+      [(ngModel)]="filterStatus"
+    ></app-autofill-select-filter>
+
+    <!-- Filter Genres -->
+    <app-autofill-select-filter
+      title="Genre"
+      [list]="(options$('genres') | async) ?? []"
+      [(ngModel)]="filterGenre"
+    ></app-autofill-select-filter>
+
+    <!-- Filter Themes -->
+    <app-autofill-select-filter
+      title="Theme"
+      [list]="(options$('themes') | async) ?? []"
+      [(ngModel)]="filterTheme"
+    ></app-autofill-select-filter>
+
+    <!-- Filter Authors -->
+    <app-autofill-select-filter
+      title="Author"
+      [list]="(options$('authors') | async) ?? []"
+      [(ngModel)]="filterAuthor"
+    ></app-autofill-select-filter>
+
+    <!-- Filter Publishers -->
+    <app-autofill-select-filter
+      title="Publisher"
+      [list]="(options$('publishers') | async) ?? []"
+      [(ngModel)]="filterPublisher"
+    ></app-autofill-select-filter>
+
+    <!-- Filter Rating -->
+    <app-number-range-filter
+      title="Rating"
+      [max]="10"
+      [step]="0.01"
+      [(ngModel)]="filterRating"
+    ></app-number-range-filter>
+
+    <!-- Search -->
+    <button
+      class="inactive-button mt-5 mr-auto flex w-fit cursor-pointer rounded-md border-2 border-solid p-2"
+      (click)="submitFilter()"
     >
-        <!-- Filter Title -->
-        <div>
-            <div class="text-xs italic">Title</div>
-            <input type="text" class="mc-input" [(ngModel)]="filterTitle" />
-        </div>
+      @if (false) {
+        <svg class="mr-3 h-5 w-5 animate-spin ..." viewBox="0 0 24 24">
+          <!-- ... -->
+        </svg>
+      }
+      Search
+    </button>
+  </div>
 
-        <!-- Filter Category -->
-        <app-autofill-select-filter
-            title="Category"
-            [list]="(options$('category') | async) ?? []"
-            [(ngModel)]="filterCategory"
-        ></app-autofill-select-filter>
-
-        <!-- Filter Status -->
-        <app-autofill-select-filter
-            title="Release Status"
-            [list]="(options$('status') | async) ?? []"
-            [(ngModel)]="filterStatus"
-        ></app-autofill-select-filter>
-
-        <!-- Filter Genres -->
-        <app-autofill-select-filter
-            title="Genre"
-            [list]="(options$('genres') | async) ?? []"
-            [(ngModel)]="filterGenre"
-        ></app-autofill-select-filter>
-
-        <!-- Filter Themes -->
-        <app-autofill-select-filter
-            title="Theme"
-            [list]="(options$('themes') | async) ?? []"
-            [(ngModel)]="filterTheme"
-        ></app-autofill-select-filter>
-
-        <!-- Filter Authors -->
-        <app-autofill-select-filter
-            title="Author"
-            [list]="(options$('authors') | async) ?? []"
-            [(ngModel)]="filterAuthor"
-        ></app-autofill-select-filter>
-
-        <!-- Filter Publishers -->
-        <app-autofill-select-filter
-            title="Publisher"
-            [list]="(options$('publishers') | async) ?? []"
-            [(ngModel)]="filterPublisher"
-        ></app-autofill-select-filter>
-
-        <!-- Filter Rating -->
-        <app-number-range-filter
-            title="Rating"
-            [max]="10"
-            [step]="0.01"
-            [(ngModel)]="filterRating"
-        ></app-number-range-filter>
-
-        <!-- Search -->
-        <button
-            class="flex inactive-button mt-5 mr-auto border-solid border-2 rounded-md p-2 cursor-pointer w-fit"
-            (click)="submitFilter()"
+  <div
+    #display_items
+    id="display_items"
+    class="flex w-full flex-col items-center overflow-auto text-white"
+    style="height: calc(100vh - 112px); width: calc(100vw - 224px)"
+  >
+    <div class="main-grid grid gap-y-2">
+      @for (series of series$ | async; track $index) {
+        <div
+          class="big-shadow col-start-2 col-end-8 mr-2 ml-2 grid h-16 w-full cursor-pointer grid-cols-subgrid items-center gap-2 rounded-md bg-zinc-800 pr-4 hover:scale-[1.01] hover:bg-[#37373a]"
+          (click)="openSeriesDetails(series.series_id)"
+          (keypress)="openSeriesDetails(series.series_id)"
+          tabindex="{$index}"
         >
-            @if (false) {
-                <svg class="animate-spin h-5 w-5 mr-3 ..." viewBox="0 0 24 24">
-                    <!-- ... -->
-                </svg>
-            }
-            Search
-        </button>
-    </div>
-
-    <div
-        #display_items
-        id="display_items"
-        class="flex flex-col items-center w-full text-white overflow-auto"
-        style="height: calc(100vh - 112px); width: calc(100vw - 224px)"
-    >
-        <div class="main-grid grid gap-y-2">
-            @for (series of series$ | async; track $index) {
-                <div
-                    class="big-shadow ml-2 mr-2 pr-4 grid grid-cols-subgrid col-start-2 col-end-8 h-16 w-full items-center gap-2 rounded-md cursor-pointer bg-zinc-800 hover:scale-[1.01] hover:bg-[#37373a]"
-                    (click)="openSeriesDetails(series.series_id)"
-                    (keypress)="openSeriesDetails(series.series_id)"
-                    tabindex="{$index}"
-                >
-                    <app-cover-image
-                        [cover_image]="series.cover_image"
-                        [name]="series.title"
-                        size="h-16"
-                    ></app-cover-image>
-                    <div class="flex flex-col gap-1">
-                        <p class="text-nowrap overflow-hidden text-ellipsis">
-                            {{ series.title }}
-                        </p>
-                        <div
-                            class="flex gap-1 text-xs text-indigo-950 text-nowrap font-semibold overflow-hidden"
-                        >
-                            @for (genre of series.genres; track genre) {
-                                <p
-                                    class="pl-1 pr-1 leading-4 rounded-md bg-indigo-400"
-                                >
-                                    {{ genre }}
-                                </p>
-                            }
-                        </div>
-                    </div>
-                    <div class="text-center">
-                        {{ series.category }}
-                    </div>
-                    <div class="text-center">
-                        {{ series.bayesian_rating }}
-                    </div>
-                    <div>{{ series.volumes.length }} Vols</div>
-                    <div>
-                        {{ series.status }}
-                    </div>
-                </div>
-            } @empty {
-                <p class="text">Loading...</p>
-            }
-        </div>
-        <div class="flex justify-center gap-3 mt-8 mb-8 w-full">
-            <button
-                class="active-button mr-1 border-solid border-2 rounded-md p-2 cursor-pointer w-fit"
-                (click)="previous()"
-                [disabled]="disablePrevious()"
+          <app-cover-image
+            [cover_image]="series.cover_image"
+            [name]="series.title"
+            size="h-16"
+          ></app-cover-image>
+          <div class="flex flex-col gap-1">
+            <p class="overflow-hidden text-nowrap text-ellipsis">
+              {{ series.title }}
+            </p>
+            <div
+              class="flex gap-1 overflow-hidden text-xs font-semibold text-nowrap text-indigo-950"
             >
-                Previous
-            </button>
-            <button
-                class="active-button ml-1 border-solid border-2 rounded-md p-2 cursor-pointer w-fit"
-                (click)="next()"
-            >
-                Next
-            </button>
+              @for (genre of series.genres; track genre) {
+                <p class="rounded-md bg-indigo-400 pr-1 pl-1 leading-4">
+                  {{ genre }}
+                </p>
+              }
+            </div>
+          </div>
+          <div class="text-center">
+            {{ series.category }}
+          </div>
+          <div class="text-center">
+            {{ series.bayesian_rating }}
+          </div>
+          <div>{{ series.volumes.length }} Vols</div>
+          <div>
+            {{ series.status }}
+          </div>
         </div>
+      } @empty {
+        <p class="text">Loading...</p>
+      }
     </div>
+    <div class="mt-8 mb-8 flex w-full justify-center gap-3">
+      <button
+        class="active-button mr-1 w-fit cursor-pointer rounded-md border-2 border-solid p-2"
+        (click)="previous()"
+        [disabled]="disablePrevious()"
+      >
+        Previous
+      </button>
+      <button
+        class="active-button ml-1 w-fit cursor-pointer rounded-md border-2 border-solid p-2"
+        (click)="next()"
+      >
+        Next
+      </button>
+    </div>
+  </div>
 </div>
