clean up files and errors

--- a/src/app/common/search-volumes/search-volumes.component.html
+++ b/src/app/common/search-volumes/search-volumes.component.html
@@ -17,7 +17,7 @@
             tabindex="{{ $index }}"
           >
             <img
-              [src]="option.primary_cover_image_url"
+              [src]="option.primary_cover_image"
               alt="{{ 'cover image for' + option.name }}"
               class="cover-image"
             />
